--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-MONGODB_URL =mongodb+srv://admin:admin@cluster0.zjt3n.mongodb.net/shop-online?retryWrites=true&w=majority
+MONGODB_URL =
 
-CLOUD_API_KEY = 425853996696286
-CLOUD_API_SECRET = _n7Xi72vFEFhmguulixPjOQKEXQ
-CLOUD_NAME = dpwuhetzj
+CLOUD_API_KEY = 
+CLOUD_API_SECRET = 
+CLOUD_NAME = 
+
 
 
 REFRESH_TOKEN_SECRET = YOUR_REFRESH_TOKEN_SECRET
